# assimp-XNAlara

./: .gitignore  CMakeLists.txt  README.md
code/AssetLib/XNAlara/: XnalaraImporter.cpp  XnalaraImporter.hpp  ascii_ops.cpp  ascii_ops.hpp.autosave  bin_ops.cpp  bin_ops.cpp.autosave  bin_ops.hpp  read_ascii_xps.cpp  read_ascii_xps.cpp.autosave  read_ascii_xps.hpp  read_bin_xps.cpp  read_bin_xps.hpp  xps_const.hpp
test/XNAlara/: CMakeLists.txt  main.cpp
